--- a/pom.xml
+++ b/pom.xml
@@ -392,6 +392,7 @@
                         <executions>
                             <execution>
                                 <id>enforce-versions</id>
+
                                 <goals>
                                     <goal>enforce</goal>
                                 </goals>
@@ -405,6 +406,11 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                         <groupId>org.eclipse.jetty</groupId>
+                         <artifactId>jetty-maven-plugin</artifactId>
+                         <version>9.4.15-SNAPSHOT</version>
+                         </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
