--- a/pom.xml
+++ b/pom.xml
@@ -407,9 +407,9 @@
                         </executions>
                     </plugin>
                     <plugin>
-                      <groupId>org.eclipse.jetty</groupId>
-                      <artifactId>jetty-maven-plugin</artifactId>
-                      <version>9.4.0-SNAPSHOT</version>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                     <version>9.4.0.M0</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
