--- a/pom.xml
+++ b/pom.xml
@@ -455,6 +455,7 @@
                     <plugin>
                      <groupId>org.codehaus.mojo</groupId>
                      <artifactId>jetty-maven-plugin</artifactId>
+                     <version>9.4.14.v20181114</version>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
