--- a/gameoflife-acceptance-tests/pom.xml
+++ b/gameoflife-acceptance-tests/pom.xml
@@ -12,7 +12,7 @@
         <jetty.port>9090</jetty.port>
         <jetty.stop.port>9999</jetty.stop.port>
         <webdriver.base.url>http://localhost:${jetty.port}</webdriver.base.url>
-        <webdriver.driver>firefox</webdriver.driver>
+        //<webdriver.driver>firefox</webdriver.driver>
         <thucydides.version>0.9.268</thucydides.version>
     </properties>
     <dependencies>
