--- a/pom.xml
+++ b/pom.xml
@@ -77,9 +77,18 @@
             </plugin>
             <!-- CODE COVERAGE -->
             <plugin>
-                <groupId>org.jacoco</groupId>
+                <groupId>org.
+                
+                
+                
+                
+                </groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.2.201409121644</version>
+                <version>8.0
+                
+                
+                
+                </version>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
