--- a/pom.xml
+++ b/pom.xml
@@ -77,18 +77,9 @@
             </plugin>
             <!-- CODE COVERAGE -->
             <plugin>
-                <groupId>org.
-                
-                
-                
-                
-                </groupId>
+                <groupId>org.</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>8.0
-                
-                
-                
-                </version>
+                <version>8.0</version>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
@@ -317,7 +308,7 @@
                                 <plugin>
                                     <groupId>org.jacoco</groupId>
                                     <artifactId>jacoco-maven-plugin</artifactId>
-                                    <version>0.7.2.201409121644</version>
+                                    <version>8</version>
                                 </plugin>
                                 <plugin>
                                     <groupId>org.apache.maven.plugins</groupId>
